Bug 1710408 - Do not record JSContext info if the js feature is disabled r=gerald

Differential Revision: https://phabricator.services.mozilla.com/D126392